--- a/local/templates/chernika/components/bitrix/catalog.smart.filter/.default/style.css
+++ b/local/templates/chernika/components/bitrix/catalog.smart.filter/.default/style.css
@@ -18,3 +18,13 @@
 {
     height: auto;
 }
+
+.aside-filter-item .hidden {
+    display: none;
+}
+
+#brandFilter
+{
+    width: 100%;
+    padding: 5px;
+}
