Фильтр. Фикс параметра Цвет Фид. Выгрузка товаров товаров по галке, наличию и условию "доставка 1-4 дня" Фикс названия товара: восстанавливается, если было изменено в админке.

--- a/local/templates/chernika/components/bitrix/catalog.smart.filter/.default/style.css
+++ b/local/templates/chernika/components/bitrix/catalog.smart.filter/.default/style.css
@@ -28,3 +28,7 @@
     width: 100%;
     padding: 5px;
 }
+
+.aside-filter-item ul.colors .colors-item.bx_filter_param_label.disabled{
+    display:none;
+}
